# celestial-industries

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md
assets/models/: supply_depot.model  tesla_tower.model  upright_bot.model
cmake_modules/: FindSDL2.cmake  FindSDL2_mixer.cmake
data/levels/: 100trees.txt  200sands.txt  200trees.txt  400trees.txt  GameLevel1.txt  emptylevel.txt  gunturret.txt  legend.txt  level1.txt  level1gunTrees.txt
data/models/: Aircraft.model  Heli.model  Refinery.model  Refinery.mtl  Road1.model  Road1.mtl  Road2.model  Road2.mtl  Tree1.model  Tree1.mtl  Tree2.model  Tree2.mtl  Tree3.model  Tree3.mtl  TurretBase.model  TurretBase.mtl  TurretFull.model  TurretGuns.model  TurretGuns.mtl  TurretGunsLeft.model  TurretGunsLeft.mtl  TurretGunsRight.model  TurretTop.model  TurretTop.mtl  Water1.mtl  ball.mtl  beam.model  beam.mtl  brickCube.mtl  bullet.model  bullet.mtl  camoLego.mtl  command_center.model  command_center.mtl  deadTreeTile1.model  deadTreeTile1.mtl  enemyRangeRadiusUnit.model  enemyRangeRadiusUnitBase.model  enemyRangeRadiusUnitBase.mtl  enemyRangeRadiusUnitTop.model  (+42 more)
data/models/Blocky Characters (Units)/: License.txt
data/models/Terrain Holiday Pack/: License.txt
data/models/Terrain Holiday Pack/Models/: cabinCorner.fbx  cabinDoor.fbx  cabinDoor.mtl  cabinFloor.fbx  cabinRoof.fbx  cabinRoof.mtl  cabinRoofChimney.fbx  cabinRoofChimney.mtl  cabinSide.fbx  cabinSide.mtl  cabinWall.fbx  cabinWindow.fbx  cabinWindow.mtl  candyCane.fbx  candyCane.mtl  candyCaneMint.fbx  candyCaneMint.mtl  festivusPole.fbx  festivusPole.mtl  lightsGreen.fbx  lightsGreen.mtl  lightsMulti.fbx  lightsMulti.mtl  lightsRed.fbx  lightsRed.mtl  present.fbx  present.mtl  presentLow.fbx  presentRound.fbx  rockFormationLarge.fbx  rockFormationMedium.fbx  rockFormationSmall.fbx  rockFormationSmall.mtl  sled.fbx  snowFort.fbx  snowFort.mtl  snowPatch.fbx  snowman.fbx  snowman.mtl  snowmanFancy.fbx  (+25 more)
data/models/Terrain Holiday Pack/Models/Materials/: carrot.mat  gold.mat  leaves.mat  lightGreen.mat  lightRed.mat  packageWhite.mat  ribbon.mat  snow.mat  stone.mat  trainGrey.mat  woodDark.mat
data/models/Terrain Holiday Pack/Unity package/: Holiday Pack.unitypackage
data/models/Turrets/TURRET1/TEXTURE/: TRU__M1_BaseColor.tga  TRU__M1_Displacement.tga  TRU__M1_EmissiveColor.tga  TRU__M1_Metalness.tga  TRU__M1_Normal.tga  TRU__M1_Opacity.tga  TRU__M1_Roughness.tga  TRU__M1_ao.tga  TRU__M2_BaseColor.tga  TRU__M2_Displacement.tga  TRU__M2_EmissiveColor.tga  TRU__M2_Metalness.tga  TRU__M2_Normal.tga  TRU__M2_Opacity.tga  TRU__M2_Roughness.tga  TRU__M2_ao.tga  TRU__M3_BaseColor.tga  TRU__M3_Displacement.tga  TRU__M3_EmissiveColor.tga  TRU__M3_Metalness.tga  TRU__M3_Normal.tga  TRU__M3_Roughness.tga  TRU__M3_ao.tga
data/models/Turrets/TURRET2/TEXTURE/: T02_.mtl
data/models/Turrets/TURRET3/TEXTURE/: TR3_.mtl
shaders/: celShader.fs.glsl  celShader.vs.glsl  colored.fs.glsl  model.fs.glsl  model.vs.glsl  objrenderable.fs.glsl  objrenderable.vs.glsl  particles.fs.glsl  particles.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  ui.fs.glsl  ui.vs.glsl
src/: UIRenderer.cpp  UIRenderer.hpp  ai.cpp  ai.h  ai.hpp  aicomp.cpp  aicomp.hpp  aicore.cpp  aicore.h  aimanager.cpp  aimanager.hpp  astarnode.cpp  astarnode.hpp  attackManager.cpp  attackManger.cpp  attackManger.hpp  audiomanager.cpp  audiomanager.hpp  basicentity.cpp  basicentity.hpp  building.cpp  building.h  building.hpp  buildingfactory.cpp  buildingfactory.hpp  buildingmanager.cpp  buildingmanager.hpp  camera.cpp  camera.hpp  collisionResolver.cpp  collisionResolver.hpp  collisiondetection.cpp  collisiondetection.hpp  collisiondetector.cpp  collisiondetector.hpp  common.cpp  common.hpp  config.hpp  coord.cpp  coord.hpp  (+67 more)
src/unit/: building.h  gamepiece.cpp  gamepiece.hpp  gameunit.cpp  gameunit.hpp  genericunit.cpp  genericunit.h  genericunit.hpp  unitcomp.hpp  unitgroup.hpp  unitmanager.hpp
test/: example.cpp  genericunit_test.cpp
visual_studio/: Attempt 1.aps  Attempt1.VC.db  Attempt1.sln  Attempt1.vcxproj  Skybox.cpp  Skybox.hpp  a1.sln  a1.vcxproj  pathfinder.cpp  pathfinder.hpp  resource.h  savedLevel.txt
visual_studio/Debug/x64/: a1.ilk
visual_studio/tmp/Debug/x64/a1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  a1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
